--- a/src/components/layout/form/style.css
+++ b/src/components/layout/form/style.css
@@ -5,7 +5,6 @@
   height: 20vh;
   border-radius: 1vh;
   margin-top: 1vh;
-  max-width: 30vw;
   width: -webkit-fill-available;
 }
 
@@ -49,7 +48,7 @@ select {
   border-bottom: .2em solid #6b76fc;
   background: #e1e1e1;
   border-radius: .4vh;
-  width: 9vw;
+  width: 15vw;
   max-width: 11em;
 }
 select:focus {
@@ -63,13 +62,18 @@ select:focus {
   background: #6b76fc;
   color: white;
   border-radius: 1vh;
-  width: 8.5vw;
+  width: 11rem;
   float: right;
-  margin-top: 1vh;
   font-size: 1em;
   text-transform: uppercase;
   cursor: pointer;
   transition: .25s;
+  margin-top: -5vh;
+  margin-right: -.5vw;
+}
+.button.danger {
+  margin-right: 3rem;
+  background: #ff4e4e!important;
 }
 
 .button:hover {
